--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -128,7 +128,7 @@ permalink: /selectors
     </div>
 
     <!-- Field -->
-    <div class="field--error">
+    <div class="field JS_field--error">
       <div class="field__label">Status</div>
       <div class="field__data">
 
@@ -343,6 +343,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="Not started">
     </div>
   </div>
 </div>
@@ -374,6 +376,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="dev-team, back-end, 298">
     </div>
   </div>
 </div>
@@ -405,6 +409,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="Ongoing">
     </div>
   </div>
 </div>
@@ -427,6 +433,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value=", ">
     </div>
   </div>
 </div>
@@ -449,6 +457,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="">
     </div>
   </div>
 </div>
@@ -483,6 +493,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="">
     </div>
   </div>
 </div>
@@ -503,6 +515,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum">
     </div>
   </div>
 </div>
@@ -533,6 +547,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="improvement, design">
     </div>
   </div>
 </div>
@@ -577,6 +593,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="design, marketing, front-end, back-end">
     </div>
   </div>
 </div>
@@ -586,7 +604,7 @@ permalink: /selectors
   <div class="field__label">Date  Filter</div>
   <div class="field__data">
     <div class="field__value">
-      <div class="inline align-middle overflow-hidden">
+
         <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
           <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -618,7 +636,8 @@ permalink: /selectors
             </div>
           </div>
         </div>
-      </div>
+
+        <input class="field__input" type="text" value="include next 2 weeks (12/03/18-25/03/18) and 19/03/18-20/03/18, exclude today or 18/03/18">
     </div>
   </div>
 </div>
@@ -630,6 +649,7 @@ permalink: /selectors
   <div class="field__label">Tags</div>
   <div class="field__data">
     <div class="field__value">
+
       <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
         <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block">
@@ -644,6 +664,8 @@ permalink: /selectors
           </div>
         </div>
       </div>
+
+      <input class="field__input" type="text" value="282, 2013_Maintenance, workaround_available">
     </div>
   </div>
 </div>
