update field component

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -516,7 +516,7 @@ permalink: /selectors
         </div>
       </div>
 
-      <input class="field__input" type="text" value="Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum">
+      <input class="field__input" type="text" value="Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum" tabindex="-1">
     </div>
   </div>
 </div>
