tryout comment/attachment fiedl

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -4,6 +4,42 @@ title: Selectors
 permalink: /selectors
 ---
 
+
+
+
+
+
+  <div class="comment-field">
+    <div class="comment-field__action">
+      <div class="inline-action"></div>
+    </div>
+    <div class="comment-field__input comment-field__input--empty">
+      <textarea placeholder="Use @ to notify person"></textarea>
+    </div>
+    <div class="comment-field__action">
+      <div class="inline-action"></div>
+    </div>
+  </div>
+
+  <div class="comment-field">
+    <div class="comment-field__action">
+      <div class="inline-action"></div>
+    </div>
+    <div class="comment-field__input">
+      <div class="comment-field__attachment" style="background-image:url('./assets/images/files.jpg');">
+        <div class="comment-field__attachment-label h2">IMG</div>
+      </div>
+      <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
+    </div>
+    <div class="comment-field__action">
+      <div class="inline-action"></div>
+    </div>
+  </div>
+
+
+
+
+
 <div class="flex flex-col sm:flex-row min-h-screen">
 
   <div class="sm:w-1/2 px-4">
