--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -11,7 +11,7 @@ permalink: /selectors
     <div class="comment-field__input comment-field__input--empty">
       <textarea placeholder="Use @ to notify person"></textarea>
     </div>
-    <div class="comment-field__action hidden">
+    <div class="comment-field__action comment-field__send hidden">
       <div class="inline-action"></div>
     </div>
   </div>
@@ -25,8 +25,9 @@ permalink: /selectors
         <div class="comment-field__attachment-label h2">IMG</div>
       </div>
       <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
+      <div class="fake-input">Please read acceptence criterias,</div>
     </div>
-    <div class="comment-field__action">
+    <div class="comment-field__action comment-field__send">
       <div class="inline-action"></div>
     </div>
   </div>
@@ -36,10 +37,10 @@ permalink: /selectors
       <div class="inline-action"></div>
     </div>
     <div class="comment-field__input">
-      <textarea placeholder="Use @ to notify person" style="height: 100px; opacity: 0;">Please read acceptence criterias, @Konstantin_Kharlov and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, since these are not at all anything final.</textarea>
+      <textarea placeholder="Use @ to notify person" style="height: 100px;">Please read acceptence criterias, @Konstantin_Kharlov and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, since these are not at all anything final.</textarea>
       <div class="fake-input">Please read acceptence criterias, <span class="inline-action">@Konstantin_Kharlov</span> and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, since these are not at all anything final.</div>
     </div>
-    <div class="comment-field__action">
+    <div class="comment-field__action comment-field__send">
       <div class="inline-action"></div>
     </div>
   </div>
@@ -57,8 +58,11 @@ permalink: /selectors
       checkFakeInputHeight();
     });
 
+    $('.comment-field__input textarea').on('focusin', function() {
+      $(this).parent().parent().find('.comment-field__send').removeClass('hidden');
+    });
+
     $('.comment-field__input textarea').on('focusout', function() {
-      console.log('focus out');
       checkContentInput();
     });
 
@@ -79,7 +83,11 @@ permalink: /selectors
 
         if (textarea[0].value.length > 0) {
           $(this).find('.comment-field__input').removeClass('comment-field__input--empty');
-          $(this).find('.comment-field__action').removeClass('hidden');
+          $(this).find('.comment-field__send').removeClass('hidden');
+        }
+        else {
+          $(this).find('.comment-field__input').addClass('comment-field__input--empty');
+          $(this).find('.comment-field__send').addClass('hidden');
         }
       });
     }
