--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -10,7 +10,7 @@ permalink: /selectors
     </div>
     <div class="comment-field__input comment-field__input--empty">
       <textarea placeholder="Use @ to notify person"></textarea>
-      <div class="fake-input fake-input-empty"></div>
+      <div class="fake-input fake-input-nohtml"></div>
     </div>
     <div class="comment-field__action comment-field__send hidden">
       <div class="inline-action"></div>
@@ -26,7 +26,7 @@ permalink: /selectors
         <div class="comment-field__attachment-label h2">IMG</div>
       </div>
       <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
-      <div class="fake-input">Please read acceptence criterias,</div>
+      <div class="fake-input fake-input-nohtml">Please read acceptence criterias,</div>
     </div>
     <div class="comment-field__action comment-field__send">
       <div class="inline-action"></div>
@@ -38,8 +38,8 @@ permalink: /selectors
       <div class="inline-action"></div>
     </div>
     <div class="comment-field__input">
-      <textarea placeholder="Use @ to notify person" style="height: 100px;">Please read acceptence criterias, @Konstantin_Kharlov and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, since these are not at all anything final.</textarea>
-      <div class="fake-input">Please read acceptence criterias, <span class="inline-action">@Konstantin_Kharlov</span> and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, since these are not at all anything final.</div>
+      <textarea id="ttt" placeholder="Use @ to notify person" style="height: 100px;">Please read acceptence criterias, @KonstantinKharlov and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the @desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, @since these are not at all anything final.</textarea>
+      <div class="fake-input"></div>
     </div>
     <div class="comment-field__action comment-field__send">
       <div class="inline-action"></div>
@@ -51,8 +51,8 @@ permalink: /selectors
 
     // init with delay (due slow html load)
     setTimeout(function() {
-      checkFakeInputHeight();
       checkContentInput();
+      checkFakeInputHeight();
     }, 3000);
 
     $(window).on('resize', function() {
@@ -85,12 +85,21 @@ permalink: /selectors
     function checkContentInput() {
       $('.comment-field').each(function() {
         var textarea = $(this).find('.comment-field__input textarea');
+        var notified = textarea[0].value.match(/@[a-z]+/gi);
+        var newval = textarea[0].value;
 
         if (textarea[0].value.length > 0) {
           $(this).find('.comment-field__input').removeClass('comment-field__input--empty');
           $(this).find('.comment-field__send').removeClass('hidden');
 
-          $(this).find('.fake-input-empty').html(textarea[0].value);
+              if (notified != null && notified.length > 0) {
+                for (var i = 0; i < notified.length; i++) {
+                  newval = newval.replace(notified[i], '<a href="#" class="inline-action">' + notified[i] + '</a>');
+                }
+              }
+
+              $(this).find('.fake-input').html(newval);
+
         }
         else {
           $(this).find('.comment-field__input').addClass('comment-field__input--empty');
