--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -5,8 +5,8 @@ permalink: /selectors
 ---
 
   <div class="comment-field">
-    <div class="comment-field__action">
-      <div class="inline-action"></div>
+    <div class="comment-field__action comment-field__attach">
+      <div class="inline-action"><input name="upload" type="file" class="file-input"></div>
     </div>
     <div class="comment-field__input comment-field__input--empty">
       <textarea placeholder="Use @ to notify person"></textarea>
@@ -18,13 +18,13 @@ permalink: /selectors
   </div>
 
   <div class="comment-field">
-    <div class="comment-field__action">
+    <div class="comment-field__action comment-field__attach">
       <div class="inline-action"></div>
     </div>
     <div class="comment-field__input">
-      <div class="comment-field__attachment" style="background-image:url('./assets/images/files.jpg');">
-        <div class="comment-field__attachment-label h2">IMG</div>
-      </div>
+      <a href="#" class="comment-field__attachment" style="background-image:url('./assets/images/files.jpg');">
+        <div class="comment-field__attachment-label h2">jpg</div>
+      </a>
       <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
       <div class="fake-input fake-input-nohtml">Please read acceptence criterias,</div>
     </div>
@@ -34,7 +34,7 @@ permalink: /selectors
   </div>
 
   <div class="comment-field">
-    <div class="comment-field__action">
+    <div class="comment-field__action comment-field__attach">
       <div class="inline-action"></div>
     </div>
     <div class="comment-field__input">
@@ -53,6 +53,13 @@ permalink: /selectors
     setTimeout(function() {
       checkContentInput();
       checkFakeInputHeight();
+
+      $('.fake-input span').each(function() {
+        $(this).on('click', function() {
+          console.log('clicked span');
+          $(this).parent().parent().find('textarea').trigger('focusin');
+        });
+      });
     }, 3000);
 
     $(window).on('resize', function() {
@@ -69,7 +76,27 @@ permalink: /selectors
     });
 
     $('.comment-field__input textarea').on('keyup', function() {
+      if ($(this).val().length > 0) {
+        $(this).parent().parent().find('.comment-field__attach .inline-action').html('');
+      }
+      else {
+        $(this).parent().parent().find('.comment-field__attach .inline-action').html('');
+      }
       checkFakeInputHeight();
+    });
+
+    $('input[type=file]').change(function () {
+      var filePath = $(this).val();
+      var fileName = filePath.substring(filePath.lastIndexOf("\\") + 1, filePath.length);
+      var fileExtension = filePath.substring(filePath.lastIndexOf(".") + 1, filePath.length);
+
+      $(this).parent().parent().parent().find('.comment-field__send').removeClass('hidden');
+      $(this).parent().parent().parent().find('.comment-field__input').removeClass('comment-field__input--empty').prepend('<a href="#'+fileName+'" class="comment-field__attachment" style="background-image:url(./assets/images/files.jpg);"><div class="comment-field__attachment-label h2">'+fileExtension+'</div></a>');
+      $(this).parent().parent().parent().find('.comment-field__input textarea').val(fileName);
+      $(this).parent().parent().parent().find('.fake-input').html(fileName);
+
+      $(this).parent().parent().parent().find('.comment-field__attach .inline-action').html('');
+
     });
 
     function checkFakeInputHeight() {
@@ -95,9 +122,11 @@ permalink: /selectors
 
               if (notified != null && notified.length > 0) {
                 for (var i = 0; i < notified.length; i++) {
-                  newval = newval.replace(notified[i], '<a href="#" class="inline-action">' + notified[i] + '</a>');
+                  newval = newval.replace(notified[i], '</span><a href="#'+notified[i]+'" class="inline-action">' + notified[i] + '</a><span>');
                 }
               }
+
+              newval = newval.replace(newval, '<span>' + newval + '</span>');
 
               $(this).find('.fake-input').html(newval);
 
@@ -105,6 +134,7 @@ permalink: /selectors
         else {
           $(this).find('.comment-field__input').addClass('comment-field__input--empty');
           $(this).find('.comment-field__send').addClass('hidden');
+          $(this).find('.fake-input').empty();
         }
       });
     }
