--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -16,7 +16,7 @@ permalink: /future
 
   <main class="container-master">
     <header class="app-header px-4 py-2">
-      {% include blocks/app-header.html %}
+      {% include blocks/app-header-future.html %}
     </header>
 
     {% include blocks/breadcrumbs.html %}
