--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -86,13 +86,13 @@ permalink: /selectors
 
     <div class="comment-field">
       <div class="comment-field__action comment-field__attach">
-        <div class="inline-action"><input name="upload" type="file" class="file-input"></div>
+        <div class="inline-action"><input name="upload" type="file" class="file-input" tabindex="-1"></div>
       </div>
       <div class="comment-field__input comment-field__input--empty">
         <textarea placeholder="Use @ to notify person"></textarea>
         <div class="fake-input fake-input-nohtml"></div>
       </div>
-      <div class="comment-field__action comment-field__send hidden">
+      <div class="comment-field__action comment-field__send opacity-0">
         <div class="inline-action"></div>
       </div>
     </div>
@@ -108,7 +108,7 @@ permalink: /selectors
         <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
         <div class="fake-input fake-input-nohtml">Please read acceptence criterias,</div>
       </div>
-      <div class="comment-field__action comment-field__send">
+      <div class="comment-field__action comment-field__send opacity-0">
         <div class="inline-action"></div>
       </div>
     </div>
@@ -121,7 +121,7 @@ permalink: /selectors
         <textarea placeholder="Use @ to notify person" style="height: 100px;">Please read acceptence criterias, @KonstantinKharlov and you can find the layout of these stories on http://devcenter.tenforce.com/mockups/ along with the @desired effects when clicking the 'menu' and 'account' icons, and the tabs navigation. please do not look at the main content layout, @since these are not at all anything final.</textarea>
         <div class="fake-input"></div>
       </div>
-      <div class="comment-field__action comment-field__send">
+      <div class="comment-field__action comment-field__send opacity-0">
         <div class="inline-action"></div>
       </div>
     </div>
@@ -153,7 +153,7 @@ permalink: /selectors
     $('.comment-field__input textarea').on('focusin', function() {
       $('.overlay-body').addClass('opacity-100');
       $(this).parent().parent().addClass('.comment-field--focus');
-      $(this).parent().parent().find('.comment-field__send').removeClass('hidden');
+      $(this).parent().parent().find('.comment-field__send').addClass('opacity-100');
     });
 
     $('.comment-field__input textarea').on('focusout', function() {
@@ -165,10 +165,10 @@ permalink: /selectors
 
     $('.comment-field__input textarea').on('keyup', function() {
       if ($(this).val().length > 0) {
-        $(this).parent().parent().find('.comment-field__attach .inline-action').html('');
+        $(this).parent().parent().find('.comment-field__attach .inline-action').addClass('JS_remove_comment').html('');
       }
       else {
-        $(this).parent().parent().find('.comment-field__attach .inline-action').html('<input name="upload" type="file" class="file-input">');
+        $(this).parent().parent().find('.comment-field__attach .inline-action').removeClass('JS_remove_comment').html('<input name="upload" type="file" class="file-input" tabindex="-1">');
         $(this).parent().parent().find('.comment-field__attachment').remove();
       }
 
@@ -181,15 +181,15 @@ permalink: /selectors
       var fileName = filePath.substring(filePath.lastIndexOf("\\") + 1, filePath.length);
       var fileExtension = filePath.substring(filePath.lastIndexOf(".") + 1, filePath.length);
 
-      $(this).parent().parent().parent().find('.comment-field__send').removeClass('hidden');
+      $(this).parent().parent().parent().find('.comment-field__send').addClass('opacity-100');
       $(this).parent().parent().parent().find('.comment-field__input').removeClass('comment-field__input--empty').prepend('<a href="#'+fileName+'" class="comment-field__attachment" style="background-image:url(./assets/images/files.jpg);"><div class="comment-field__attachment-label h2 hidden">'+fileExtension+'</div></a>');
       $(this).parent().parent().parent().find('.comment-field__input textarea').val(fileName);
       $(this).parent().parent().parent().find('.fake-input').html(fileName);
-      $(this).parent().parent().parent().find('.comment-field__attach .inline-action').html('');
+      $(this).parent().parent().parent().find('.comment-field__attach .inline-action').addClass('JS_remove_comment').html('');
     });
 
     $('.JS_remove_comment').on('click', function() {
-      $(this).parent().parent().find('.comment-field__attach .inline-action').html('<input name="upload" type="file" class="file-input">');
+      $(this).parent().parent().find('.comment-field__attach .inline-action').removeClass('JS_remove_comment').html('<input name="upload" type="file" class="file-input" tabindex="-1">');
       $(this).parent().parent().find('.comment-field__attachment').remove();
       $(this).parent().parent().find('.comment-field__input textarea').empty();
 
@@ -216,7 +216,7 @@ permalink: /selectors
 
         if (textarea[0].value.length > 0) {
           $(this).find('.comment-field__input').removeClass('comment-field__input--empty');
-          $(this).find('.comment-field__send').removeClass('hidden');
+          $(this).find('.comment-field__send').addClass('opacity-100');
 
             // turn @<notified> into links
             if (notified != null && notified.length > 0) {
@@ -229,7 +229,7 @@ permalink: /selectors
         }
         else {
           $(this).find('.comment-field__input').addClass('comment-field__input--empty');
-          $(this).find('.comment-field__send').addClass('hidden');
+          $(this).find('.comment-field__send').removeClass('opacity-100');
           $(this).find('.fake-input').empty();
         }
       });
