--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -5,7 +5,7 @@ permalink: /selectors
 ---
 
 <div class="relative h-32"></div>
-<div class="fixed pin-t pin-l w-full flex pt-4 z-50 bg-grey-lightest shadow-lg text-center">
+<div class="fixed pin-t pin-l w-full flex pt-4 z-highest bg-grey-lightest shadow-lg text-center">
   <div class="px-4">
 
     <div class="field field--not-empty">
